@@ -8,6 +8,9 @@ Zope Changes
 
     Bugs fixed
 
+      - Collector #2288: @ and + should not be quoted when forming
+        request URLs in BaseRequest and HTTPRequest
+
       - Undeprecated 'zLOG', which will remain a backward-compatibility
         shim for the Python logging module.
 
